--- a/.eslintrc
+++ b/.eslintrc
@@ -1,80 +1,21 @@
 {
-    "globals": {
-        "Ext": false,
-        "GeoExt": true,
-        "ol": false
-    },
-    "rules": {
-        "comma-dangle": 2,
-        "no-cond-assign": 2,
-        "no-console": 2,
-        "no-constant-condition": 2,
-        "no-control-regex": 2,
-        "no-debugger": 2,
-        "no-dupe-args": 2,
-        "no-dupe-keys": 2,
-        "no-duplicate-case": 2,
-        "no-empty-character-class": 2,
-        "no-empty": 2,
-        "no-ex-assign": 2,
-        "no-extra-boolean-cast": 2,
-        "no-extra-semi": 2,
-        "no-func-assign": 2,
-        "no-inner-declarations": 2,
-        "no-invalid-regexp": 2,
-        "no-irregular-whitespace": 2,
-        "no-negated-in-lhs": 2,
-        "no-obj-calls": 2,
-        "no-regex-spaces": 2,
-        "no-sparse-arrays": 2,
-        "no-unreachable": 2,
-        "use-isnan": 2,
-        "valid-typeof": 2,
-        "no-unexpected-multiline": 2,
-
-        "curly": 2,
-        "eqeqeq": 2,
-        "no-alert": 2,
-        "no-caller": 2,
-        "no-eval": 2,
-        "no-extend-native": 2,
-        "no-floating-decimal": 2,
-        "no-implied-eval": 2,
-        "no-loop-func": 2,
-        "no-multi-spaces": 1,
-        "no-multi-str": 2,
-        "no-new-func": 2,
-        "no-redeclare": 2,
-        "no-self-compare": 2,
-        "no-unused-expressions": 2,
-        "no-with": 2,
-        "radix": 2,
-        "wrap-iife": 2,
-        "strict": [2, "never"],
-
-        "no-catch-shadow": 2 ,
-        "no-delete-var": 2,
-        "no-shadow-restricted-names": 2,
-        "no-shadow": 2,
-        "no-undef": 2 ,
-        "no-unused-vars": 2,
-        "no-use-before-define": 2,
-
-        "brace-style": [1, "1tbs"],
-        "eol-last": 1,
-        "indent": 1,
-        "linebreak-style": [2, "unix"],
-        "no-mixed-spaces-and-tabs": 2,
-        "no-nested-ternary": 2,
-        "no-trailing-spaces": 2,
-        "semi": [2, "always"],
-        "max-len": [1, 80, 4],
-
-        "valid-jsdoc": [2, {
-            "prefer": {
-                "returns": "return"
-            },
-            "requireReturn": false
-        }]
-    }
+  "extends": "openlayers",
+  "globals": {
+    "Ext": false,
+    "GeoExt": false,
+    "ol": false
+  },
+  "rules": {
+    "consistent-this": [1, "me"],
+    "indent": [1, 4, { "VariableDeclarator": 1 }],
+    "max-len": [2, 80, 4],
+    "one-var": [2, "never"],
+    "quote-props": [1, "consistent"],
+    "valid-jsdoc": [2, {
+        "prefer": {
+            "returns": "return"
+        },
+        "requireReturn": false
+    }]
+  }
 }
